--- a/package.json
+++ b/package.json
@@ -1,17 +1,11 @@
 {
-  "name": "newman-reporter-slackmsg",
-  "version": "1.3.2",
+  "name": "newman-reporter-slackmsgcipta",
+  "version": "1.4",
   "description": "newman reporter to slack",
   "main": "index.js",
-  "scripts": {
-    "lint": "eslint index/js",
-    "test": "jest",
-    "prepack": "npm run test",
-    "pack": "npm pack && npm install -g newman-reporter-slack-1.0.0.tgz"
-  },
   "repository": {
     "type": "git",
-    "url": "https://github.com/jackcoded/newman-reporter-slackmsg/"
+    "url": "https://github.com/ciptawili/newman-reporter-slackmsg/"
   },
   "keywords": [
     "newman",
@@ -20,12 +14,12 @@
     "newman reporter",
     "custom newman reporter"
   ],
-  "author": "Jack Chaw",
+  "author": "cipta",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/jackcoded/newman-reporter-slackmsg/issues"
+    "url": "https://github.com/ciptawili/newman-reporter-slackmsg/issues"
   },
-  "homepage": "https://github.com/jackcoded/newman-reporter-slackmsg#readme",
+  "homepage": "https://github.com/ciptawili/newman-reporter-slackmsg#readme",
   "dependencies": {
     "@types/node": "^14.0.13",
     "axios": "^0.21.1",
